[tool.poetry]
name = "dashboards-ai"
version = "0.1.0"
description = ""
authors = ["Pablo Vítor <pablovitorrocha017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
pandas = "^2.2.2"
pyrebase4 = "^4.8.0"
pkg = "^0.2"
pip = "^24.0"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
